Increase nav bar z index to prevent text overlap

--- a/theme/moove/scss/moove/_navbar.scss
+++ b/theme/moove/scss/moove/_navbar.scss
@@ -112,7 +112,7 @@ nav.navbar {
     top: 0;
     right: 0;
     left: 0;
-    z-index: 1030;
+    z-index: 2000;
 
     .drawer-toggle {
         height: 70px;
